post/comment overflow fix

--- a/react-app/src/components/PostComments/index.css
+++ b/react-app/src/components/PostComments/index.css
@@ -34,10 +34,13 @@
 .comment-container {
     display: flex;
     flex-direction: column;
+    /* max-width: 100%; */
 }
 
 .individual-comment {
-    padding: 10px
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .edit-delete {
